# tonic-mock

./: .gitignore  Cargo.toml  README.md  build.rs
doc/: design.md
resources/: dummy.proto  tonic_mock.dummy.rs
src/: checker.rs  lib.rs  matchers.rs  mock.rs  responder.rs  server.rs  times.rs
tests/: route_guide.rs
tonic-mock-macros/: Cargo.toml
tonic-mock-macros/src/: lib.rs
