[package]
name = "tonic-mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures-util = "0.3.28"
http = "0.2.9"
hyper = { version = "0.14.27", features = ["server", "http2", "http1", "runtime", "tcp", "stream"] }
prost = "0.11.9"
tonic = "0.9.2"
tower = "0.4.13"

[build-dependencies]
tonic-build = "0.9.2"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
