[package]
name = "tonic-mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
bytes = "1.4.0"
deadpool = "0.9.5"
futures = "0.3.28"
futures-util = "0.3.28"
http = "0.2.9"
hyper = { version = "0.14.27", features = ["server", "http2", "http1", "runtime", "tcp", "stream"] }
once_cell = "1.18.0"
prost = "0.11.9"
tokio = { version = "1.32.0", features = ["sync", "net"] }
tonic = "0.9.2"
tonic-mock-macros = { path = "./tonic-mock-macros" } 
tower = { version = "0.4.13", features = ["util"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"
tracing = "0.1.37"

[build-dependencies]
tonic-build = "0.9.2"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tracing-test = "0.2.4"
